# hyperdag-platform

./: .dockerignore  .gitignore  .railwayignore  APPLY_FLASHING_FIX.md  BLOAT_PURGE_SUMMARY.md  BLOCKCHAIN-CAPABILITIES-PROOF.md  CLEANUP_REPORT.md  DEPLOYMENT_FIX.md  DEPLOY_NOW.md  DISABLE_BLOAT.ts  Dockerfile  FLASHING-FIX-GUIDE.md  FLASHING_FIX.md  OPTIMIZATION_ROADMAP.md  PACKAGE_REMOVAL_RECOMMENDATIONS.md  PERFORMANCE.md  PUSH_TO_GITHUB.md  QUICK_START_TRINITY.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_QUICK_START.md  TRINITY_COORDINATION_PLAN.md  TRINITY_STATUS.md  add-auth-methods.ts  add-social-columns.ts  api-keys-migration.js  api-keys-migration.mjs  auth.ts  build.js  db.ts  deployment-validator.ts  direct-column-add.ts  email_report_2025-08-06_04-33-21.txt  email_report_2025-08-07_05-09-49.txt  export-env-for-railway.sh  fix-grants-endpoint.ts  fix-routes-structure.cjs  fix-twilio-format.js  github-deployment-alternative.js  github_repository_setup.py  google-drive-sync.py  (+216 more)
.deployment/: config.json
HyperDAGManager/: README.md
agents/: README.md  SHARED_COLLABORATION_LOG.md  github-collaboration-project-SHARED.md  test-hdm.sh
application_templates/: ethglobal_brussels_application.md  gitcoin_grants_round20_proposal.md  polygon_village_grants_proposal.md
attached_assets/: MEL_ONBOARDING_RESPONSE.md  (+59 more)
blockchain/: zkp_nft.py
client/: index-direct.html  index.html  quantummath.html
mel/: .gitignore  (+1 more)
zkp-circuits/: Cargo.toml  build.rs
zkp-circuits/src/: custom_stark.rs  hierarchical_scoring.rs  lib.rs  repid_air.rs  repid_prover.rs  repid_verifier.rs
(+1224 files in other folders)
